2009-10-29  Joanmarie Diggs  <joanmarie.diggs@gmail.com>

        Reviewed by Xan Lopez.

        https://bugs.webkit.org/show_bug.cgi?id=25679
        [Gtk] Improve accessibility of focusable lists

        Implements the AtkSelection interface and enables the corresponding
        (and expected) object:selection-changed event.

        * accessibility/gtk/AccessibilityObjectWrapperAtk.cpp:
        (optionFromList):
        (optionFromSelection):
        (atk_selection_interface_init):
        (webkit_accessible_selection_add_selection):
        (webkit_accessible_selection_clear_selection):
        (webkit_accessible_selection_ref_selection):
        (webkit_accessible_selection_get_selection_count):
        (webkit_accessible_selection_is_child_selected):
        (webkit_accessible_selection_remove_selection):
        (webkit_accessible_selection_select_all_selection):
        (GetAtkInterfaceTypeFromWAIType):
        * accessibility/gtk/AXObjectCacheAtk.cpp:
        (AXObjectCache::postPlatformNotification):

2009-10-29  Jian Li  <jianli@chromium.org>

        Reviewed by Darin Adler.

        Bug 30655 - Only plain text should be copied to clipboard for TextArea.
        https://bugs.webkit.org/show_bug.cgi?id=30655

        * editing/Editor.cpp:
        (WebCore::nodeIsInTextFormControl):
        (WebCore::Editor::cut):
        (WebCore::Editor::copy):

2009-10-29  Pavel Feldman  <pfeldman@chromium.org>

        Reviewed by Timothy Hatcher.

        Web Inspector: hide timeline for now - not yet ready.

        https://bugs.webkit.org/show_bug.cgi?id=30912

        * inspector/front-end/inspector.js:
        (WebInspector._createPanels):

2009-10-29  Pavel Feldman  <pfeldman@chromium.org>

        Not reviewed: deploy Web Inspector's images in WebCore.gypi.

        * WebCore.gypi:

2009-10-29  Pavel Feldman  <pfeldman@chromium.org>

        Reviewed by Timothy Hatcher.

        Web Inspector: get rid of timelineProfilerEnabled method.
